# rusternetes

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFORMANCE_FAILURES.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DNS.md  Dockerfile  Dockerfile.api-server  Dockerfile.controller-manager  Dockerfile.dns-server  Dockerfile.kube-proxy  Dockerfile.kubectl  Dockerfile.kubelet  Dockerfile.rhino  Dockerfile.scheduler  GETTING_STARTED.md  LICENSE  LOADBALANCER.md  Makefile  PODMAN_TIPS.md  QUICKSTART.md  README.md  SETUP_NOTES.md  STATUS.md  TESTING.md  TLS_GUIDE.md  VOLUME_SNAPSHOTS.md  WEBHOOK_INTEGRATION.md  apply_to_upstream.sh  bootstrap-cluster.yaml  compose.ha.yml  compose.sqlite.yml  compose.yml  dev-setup.sh  docker-compose.ha.yml  docker-compose.sqlite.yml  (+13 more)
crates/api-server/: Cargo.toml  build.rs
crates/api-server/src/: admission.rs  admission_webhook.rs  bootstrap.rs  conversion.rs  dynamic_routes.rs  flow_control.rs  gnostic.rs  ip_allocator.rs  lib.rs  main.rs  middleware.rs  openapi.rs  patch.rs  prometheus_client.rs  protobuf.rs  response.rs  router.rs  spdy.rs  spdy_handlers.rs  spdy_upgrade.rs  state.rs  streaming.rs  watch_cache.rs
crates/api-server/src/handlers/: admission_webhook.rs  apply.rs  authentication.rs  authorization.rs  certificates.rs  componentstatus.rs  configmap.rs  controllerrevision.rs  crd.rs  cronjob.rs  cronjob.rs.bak  csidriver.rs  csinode.rs  csistoragecapacity.rs  custom_metrics.rs  custom_resource.rs  daemonset.rs  defaults.rs  deployment.rs  deviceclass.rs  discovery.rs  dryrun.rs  endpoints.rs  endpointslice.rs  event.rs  filtering.rs  finalizers.rs  flowcontrol.rs  generic.rs  generic_patch.rs  health.rs  horizontalpodautoscaler.rs  ingress.rs  ingressclass.rs  ipaddress.rs  job.rs  job.rs.bak  lease.rs  lifecycle.rs  limitrange.rs  (+40 more)
crates/api-server/tests/: admission_test.rs  admission_webhook_e2e_test.rs  auth_integration_test.rs  cluster_startup_test.rs  configmap_handler_test.rs  cronjob_handler_test.rs  csidriver_handler_test.rs  csinode_handler_test.rs  csistoragecapacity_test.rs  daemonset_handler_test.rs  deployment_handler_test.rs  dra_test.rs  e2e_workflow_test.rs  endpoints_handler_test.rs  endpointslice_handler_test.rs  event_handler_test.rs  exec_websocket_test.rs  finalizers_test.rs  horizontalpodautoscaler_handler_test.rs  ingress_handler_test.rs  ingressclass_handler_test.rs  job_handler_test.rs  lease_handler_test.rs  limitrange_handler_test.rs  namespace_handler_test.rs  networkpolicy_handler_test.rs  node_handler_test.rs  persistentvolume_handler_test.rs  persistentvolumeclaim_handler_test.rs  pod_handler_test.rs  poddisruptionbudget_handler_test.rs  priorityclass_handler_test.rs  protobuf_test.rs  proxy_test.rs  rbac_handler_test.rs  replicaset_handler_test.rs  replicationcontroller_handler_test.rs  resourcequota_handler_test.rs  runtimeclass_handler_test.rs  secret_handler_test.rs  (+13 more)
crates/cloud-providers/: Cargo.toml
crates/cloud-providers/src/: aws.rs  azure.rs  gcp.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: admission.rs  audit.rs  auth.rs  authz.rs  cel.rs  cloud_provider.rs  deletion.rs  encryption.rs  error.rs  field_selector.rs  label_selector.rs  leader_election.rs  lib.rs  observability.rs  pagination.rs  protobuf.rs  resources.rs  schema_validation.rs  server_side_apply.rs  tls.rs  tracing.rs  types.rs
crates/common/src/resources/: admission_webhook.rs  authentication.rs  authorization.rs  autoscaling.rs  binding.rs  certificates.rs  componentstatus.rs  config_and_secret.rs  controllerrevision.rs  coordination.rs  crd.rs  csi.rs  custom_metrics.rs  deployment.rs  dra.rs  endpoints.rs  endpointslice.rs  event.rs  flowcontrol.rs  ingress.rs  ingressclass.rs  ipaddress.rs  metrics.rs  namespace.rs  networking.rs  node.rs  pod.rs  policy.rs  (+8 more)
crates/common/tests/: ipaddress_test.rs  servicecidr_test.rs
crates/controller-manager/: Cargo.toml
crates/controller-manager/src/: lib.rs  main.rs
crates/controller-manager/tests/: cronjob_controller_test.rs  csr_controller_test.rs  daemonset_controller_revision_test.rs  daemonset_controller_test.rs  daemonset_revision_match_test.rs  deployment_controller_test.rs  deployment_scaling_test.rs  dynamic_provisioner_test.rs  endpoints_controller_test.rs  endpointslice_controller_test.rs  garbage_collector_test.rs  hpa_controller_test.rs  job_controller_test.rs  namespace_controller_test.rs  node_controller_test.rs  pdb_controller_test.rs  pv_binder_test.rs  replicaset_controller_test.rs  resource_quota_test.rs  service_controller_test.rs  serviceaccount_controller_test.rs  statefulset_controller_test.rs  ttl_controller_test.rs  volume_expansion_test.rs  volume_snapshot_controller_test.rs  vpa_controller_test.rs
crates/dns-server/: Cargo.toml
crates/dns-server/src/: lib.rs  main.rs  resolver.rs  server.rs  watcher.rs
crates/dns-server/tests/: dns_integration_test.rs
crates/kube-proxy/: Cargo.toml
crates/kube-proxy/src/: iptables.rs  lib.rs  main.rs  proxy.rs
crates/kubectl/: Cargo.toml  TESTING_GUIDE.md
crates/kubectl/src/: client.rs  kubeconfig.rs  main.rs  types.rs  websocket.rs
crates/kubectl/tests/: apply_tests.rs  auth_tests.rs  command_tests.rs  describe_tests.rs  exec_attach_portforward_tests.rs  info_commands_tests.rs  mock_client_example.rs  scale_patch_label_tests.rs  top_tests.rs  wait_tests.rs
crates/kubelet/: Cargo.toml
crates/kubelet/src/: config.rs  eviction.rs  kubelet.rs  lib.rs  main.rs  runtime.rs  runtime.rs.bak
crates/kubelet/tests/: cni_integration_test.rs  ephemeral_containers_test.rs  eviction_test.rs  hosts_file_test.rs  init_containers_test.rs  kubelet_lifecycle_test.rs  sidecar_containers_test.rs
crates/rusternetes/: Cargo.toml
crates/rusternetes/src/: main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: advanced.rs  advanced.rs.bak  framework.rs  lib.rs  main.rs  plugins.rs  scheduler.rs
crates/scheduler/tests/: scheduler_test.rs
crates/storage/: Cargo.toml
crates/storage/src/: cached.rs  concurrency.rs  etcd.rs  lib.rs  memory.rs  rhino.rs  workqueue.rs
(+359 files in other folders)
