[workspace]
resolver = "2"
members = [
    "crates/api-server",
    "crates/scheduler",
    "crates/controller-manager",
    "crates/kubelet",
    "crates/kube-proxy",
    "crates/kubectl",
    "crates/common",
    "crates/storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rusternetes Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusternetes/rusternetes"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"
etcd-client = "0.14"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
bollard = "0.17" # Docker API client
tonic = "0.12" # gRPC
prost = "0.13"
