[workspace]
resolver = "2"
members = [
    "crates/api-server",
    "crates/scheduler",
    "crates/controller-manager",
    "crates/kubelet",
    "crates/kube-proxy",
    "crates/kubectl",
    "crates/common",
    "crates/storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rusternetes Contributors"]
license = "Apache-2.0"
repository = "https://github.com/rusternetes/rusternetes"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"
etcd-client = "0.14"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
bollard = "0.17" # Docker API client
tonic = "0.12" # gRPC
prost = "0.13"
jsonwebtoken = "9.3" # JWT token generation and validation
rustls = { version = "0.23", features = ["aws-lc-rs"] } # TLS support with aws-lc-rs crypto provider
tokio-rustls = "0.26" # Tokio integration for rustls
rcgen = "0.13" # Certificate generation
prometheus = "0.13" # Prometheus metrics
opentelemetry = "0.22" # Distributed tracing
opentelemetry-prometheus = "0.15" # Prometheus exporter for OpenTelemetry
tracing-opentelemetry = "0.23" # OpenTelemetry integration with tracing
