[package]
name = "rusternetes-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rusternetes_api_server"
path = "src/lib.rs"

[[bin]]
name = "api-server"
path = "src/main.rs"

[features]
default = []
sqlite = ["rusternetes-storage/sqlite"]

[dependencies]
rusternetes-common = { path = "../common", features = ["axum-support"] }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1", features = ["tokio"] }
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
async-stream = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
openapiv3 = "2.2.0"
indexmap = "2.0"
tokio-tungstenite = "0.21"
bollard.workspace = true
bytes = "1.5"
get_if_addrs = "0.5"
prometheus-http-query = "0.8"
url = "2.5.8"
cel-interpreter.workspace = true
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
rusternetes-controller-manager = { path = "../controller-manager" }
warp.workspace = true
