[package]
name = "rusternetes-cloud-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusternetes-common = { path = "../common" }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# AWS SDK (optional, enabled with 'aws' feature)
aws-config = { workspace = true, optional = true }
aws-sdk-elasticloadbalancingv2 = { workspace = true, optional = true }
aws-sdk-ec2 = { workspace = true, optional = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = []
aws = ["dep:aws-config", "dep:aws-sdk-elasticloadbalancingv2", "dep:aws-sdk-ec2"]
gcp = []
azure = []
all-providers = ["aws", "gcp", "azure"]
