[package]
name = "rusternetes-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
prometheus.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile = "2.1"
axum = { workspace = true, optional = true }

[features]
default = []
axum-support = ["axum"]
