[package]
name = "rusternetes-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
prometheus.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile = "2.1"
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
regex = "1.10"
etcd-client.workspace = true

# OpenTelemetry dependencies
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-jaeger = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-stdout = { version = "0.3", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
sha2 = "0.10.9"
reqwest = { workspace = true }
cel-interpreter.workspace = true
prost.workspace = true
prost-types.workspace = true

[features]
default = []
axum-support = ["axum"]
jaeger = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-jaeger", "tracing-opentelemetry"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
tracing-full = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-stdout", "tracing-opentelemetry"]

[dev-dependencies]
tempfile = "3.27.0"
