[package]
name = "rusternetes-controller-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rusternetes_controller_manager"
path = "src/lib.rs"

[[bin]]
name = "controller-manager"
path = "src/main.rs"

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
