[package]
name = "rusternetes-controller-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rusternetes_controller_manager"
path = "src/lib.rs"

[[bin]]
name = "controller-manager"
path = "src/main.rs"

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
rusternetes-cloud-providers = { path = "../cloud-providers", optional = true }
tokio.workspace = true
fnv = "1.0"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
cron = "0.12"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken.workspace = true
rcgen.workspace = true
pem.workspace = true
base64.workspace = true

[features]
default = []
sqlite = ["rusternetes-storage/sqlite"]
cloud-providers = ["rusternetes-cloud-providers"]
aws = ["cloud-providers", "rusternetes-cloud-providers/aws"]
gcp = ["cloud-providers", "rusternetes-cloud-providers/gcp"]
azure = ["cloud-providers", "rusternetes-cloud-providers/azure"]
all-cloud-providers = ["aws", "gcp", "azure"]
