[package]
name = "rusternetes-dns-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# DNS server
hickory-server = "0.24"
hickory-proto = "0.24"
hickory-resolver = "0.24"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Common Rusternetes types
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network
trust-dns-resolver = "0.23"
