[package]
name = "rusternetes-kube-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kube-proxy"
path = "src/main.rs"

[dependencies]
rusternetes-common = { path = "../common" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
