[package]
name = "rusternetes-kube-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rusternetes_kube_proxy"
path = "src/lib.rs"

[[bin]]
name = "kube-proxy"
path = "src/main.rs"

[features]
default = []
sqlite = ["rusternetes-storage/sqlite"]

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
