[package]
name = "rusternetes-kubectl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kubectl"
path = "src/main.rs"

[dependencies]
rusternetes-common = { path = "../common" }
tokio = { workspace = true, features = ["full", "io-util", "io-std"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
tabled = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.21"
futures = "0.3"
bytes = "1.5"
url = "2.5"
tracing = "0.1"
base64 = "0.22"
tempfile = "3.10"
colored = "2.1"
diff = "0.1"
tar = "0.4"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
walkdir = "2.5"

