[package]
name = "rusternetes-kubelet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kubelet"
path = "src/main.rs"

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
bollard.workspace = true
