[package]
name = "rusternetes-kubelet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kubelet"
path = "src/main.rs"

[lib]
name = "rusternetes_kubelet"
path = "src/lib.rs"

[features]
default = []
sqlite = ["rusternetes-storage/sqlite"]

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
bollard.workspace = true
chrono.workspace = true
axum.workspace = true
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tonic.workspace = true
prost.workspace = true
http = "1"
tar = "0.4"
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3"
