[package]
name = "rusternetes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "All-in-one Kubernetes in a single binary"

[[bin]]
name = "rusternetes"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = [
    "rusternetes-storage/sqlite",
    "rusternetes-api-server/sqlite",
    "rusternetes-scheduler/sqlite",
    "rusternetes-controller-manager/sqlite",
    "rusternetes-kubelet/sqlite",
    "rusternetes-kube-proxy/sqlite",
]

[dependencies]
rusternetes-api-server = { path = "../api-server" }
rusternetes-scheduler = { path = "../scheduler" }
rusternetes-controller-manager = { path = "../controller-manager" }
rusternetes-kubelet = { path = "../kubelet" }
rusternetes-kube-proxy = { path = "../kube-proxy" }
rusternetes-storage = { path = "../storage" }
rusternetes-common = { path = "../common" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
