[package]
name = "rusternetes-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rusternetes_scheduler"
path = "src/lib.rs"

[[bin]]
name = "scheduler"
path = "src/main.rs"

[features]
default = []
sqlite = ["rusternetes-storage/sqlite"]

[dependencies]
rusternetes-common = { path = "../common" }
rusternetes-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
axum.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
uuid.workspace = true
