[package]
name = "rusternetes-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusternetes-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
etcd-client.workspace = true
async-trait.workspace = true
tracing.workspace = true
