[package]
name = "rusternetes-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["dep:rhino"]

[dependencies]
rusternetes-common = { path = "../common" }
rhino = { git = "https://github.com/calfonso/rhino.git", optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
etcd-client.workspace = true
async-trait.workspace = true
async-stream.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
